<resources>
  <string name="label_track_album">Album</string>
</resources>
