...
    },
    content = {
      Column {
        Box {
          SunsetImage(
            imageData = artworkUrl,
            contentDescription = "artwork image",
            modifier = Modifier
              .then(
                if (id.isEmpty()) {
                  Modifier
                } else {
                  Modifier
...
